--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,9 @@ title: "Jean de Dieu Nyandwi"
 toc: false
 ---
 
-I am Jean de Dieu Nyandwi. I work on visual language models. I recently completed MS Engineering AI at Carnegie Mellon University. I have had a fortune to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing people at CMU.
+I am Jean de Dieu Nyandwi. I work on visual language models. I recently completed MS Engineering AI at Carnegie Mellon University. I have had a fortune to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing people at CMU. I also have interests in AI accessible education, and I spend a fair amount of time [designing](https://nyandwi.com/machine_learning_complete/), exploring, and [sharing](https://twitter.com/Jeande_d) learning resources.
+
+Beside technical works, I regularly workout, mostly resilience training and calisthenic, some basketball, and walks sometime.
 
 <center>
 <img src="profilepic.jpg" style="float:middle; width: 40%; display: block;margin-left: auto; margin-right: auto;border-radius: 9px"/>
