--- a/research.qmd
+++ b/research.qmd
@@ -3,7 +3,16 @@ title: "Research"
 toc: false
 ---
 
-I am broadly interested in computer vision and multimodal learning. My research interests are visual representation learning and visual language models.
+I am broadly interested in computer vision and multimodal learning. My research interests center around visual language models evaluation and robustness and visual representation learning.
 
 Check my [Google Scholar](https://scholar.google.com/citations?user=X1KlIsQAAAAJ&hl=en) for updated information!
+
+
+## Publications
+
+WIP
+
+## Research Articles
+
+* The Transformer Blueprint: A Holistic Guide to the Transformer Neural Network Architecture | [Blog](https://deeprevision.github.io/posts/001-transformer/) | Views: 31K | July 2023
 
