--- a/about.qmd
+++ b/about.qmd
@@ -16,4 +16,6 @@ about:
 
 ---
 
-About this blog
+I am Jean de Dieu Nyandwi. I work on visual language models(VLMs). I recently completed MS Engineering AI at Carnegie Mellon University. I have had a fortune to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing people at CMU, mostly working on evaluation and compositionality in visual language models. I also have interests in AI education and accessibility, and I spend a fair amount of time [designing](https://nyandwi.com/machine_learning_complete/), exploring, and [sharing](https://twitter.com/Jeande_d) learning resources.
+
+Beside technical works, I regularly workout, mostly resilience training and calisthenics, some basketball, and walks sometime.
