--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,7 @@ Beside technical works, I regularly workout, mostly resilience training and cali
 
 ## Latest News
 
+* Sep 2024 - A paper accepted to NeurIPS 2024 🥳!!
 * May 2024 - Graduated from CMU MS Engineering AI!!
 * July 2023 - Published [Transformer Blueprint](https://deeprevision.github.io/posts/001-transformer/) article!
 * Oct 2022 - Listed in [top 50 AI influencers](https://onalytica.com/blog/posts/whos-who-in-artificial-intelligence-top-50-influencers/) by Onalytica
