--- a/teaching.qmd
+++ b/teaching.qmd
@@ -7,7 +7,7 @@ I very much enjoy teaching and talking about topics and things that I work on. I
 
 ### Teaching Assistant
 
-I was teaching assistant at Carnegie Mellon University in [Introduction to Machine Learning](https://18661.github.io/) and [Introduction to Deep Learning](https://deeplearning.cs.cmu.edu/F23/index.html). In both courses, I assisted with creating assessments, helping students with understanding technical materials via recitation and office hours, managing course websites and updating contents. In [Introduction to Machine Learning](https://18661.github.io/), I gave a student lecture on Multimodal LLMs(slides [here](https://docs.google.com/presentation/d/1UKCfqOwFZtLynZ75aqdIBfQ328BD5X1jOE_Lt2ZROcM/edit?usp=sharing)), something that I have been working on recently.
+I was teaching assistant at Carnegie Mellon University in [Introduction to Machine Learning](https://18661.github.io/) and [Introduction to Deep Learning](https://deeplearning.cs.cmu.edu/F23/index.html). In both courses, I assisted with creating assessments, helping students with understanding technical materials via recitations and office hours, managing course websites and updating contents. In [Introduction to Machine Learning](https://18661.github.io/), I gave a student lecture on Multimodal LLMs(slides [here](https://docs.google.com/presentation/d/1UKCfqOwFZtLynZ75aqdIBfQ328BD5X1jOE_Lt2ZROcM/edit?usp=sharing)), something that I have been working on recently.
 
 ### Introduction to Deep Learning for NLP - Mbaza NLP
 
@@ -17,9 +17,12 @@ I co-instructed two months-long course on Deep Learning for NLP at Digital Trans
 
 I designed and was the instructor for Deep Learning certification bootcamp at The PyThon Academy. The bootcamp covered deep learning fundamentals and techniques with applications in NLP and computer vision. The students gained valuable and practical experience and used the gained knowledge to pass TensorFlow Certification Program organized by Google.
 
-### AI for Everyone - Online
+### AI for Everyone on the Web
 
 I regularly create online learning resources around AI and machine learning. Complete Machine Learning Package and Transformer [video](https://youtu.be/VygOX3AyDQs?feature=shared) & [article](https://deeprevision.github.io/posts/001-transformer/) are most popular examples, you can find other resources [here](https://nyandwi.com/resources.html).
 
+AI Education is something that I deeply care about and hope to make significant contributions in the field :-).
 
+**************
 
+PS: My first real job, on a contract basis, was teaching English, social sciences, and maths at a primary school. This was right after completing high school, during the gap year prior to starting college.
