--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ resources:
     - extras/naturalbench.jpg
 ---
 
-I am Jean de Dieu Nyandwi. I work on machine learning and multimoda AI, and currently a visiting researcher at CMU LTI, where I am fortune to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing people in [Neulab](https://www.cs.cmu.edu/~neulab/) and CMU.
+I am Jean de Dieu Nyandwi. I work on machine learning and multimodal AI, and currently a visiting researcher at CMU LTI, where I am fortune to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing people in [Neulab](https://www.cs.cmu.edu/~neulab/) and CMU.
 
 <center>
 <img src="profilepic.jpg" style="float:middle; width: 40%; display: block;margin-left: auto; margin-right: auto;border-radius: 9px"/>
