--- a/index.qmd
+++ b/index.qmd
@@ -26,9 +26,19 @@ Beside research, I also have interests in AI education and accessibility, and I 
 
 Outside technical works, I regularly workout, mostly resilience training, crossfit, calisthenics, basketball, and running.
 
+:::{.d-flex .justify-content-center .gap-2 .flex-wrap .mt-2}
+[X/Twitter](https://x.com/jeande_d){.btn .btn-sm .btn-outline-secondary}
+[CV](https://nyandwi.com/extras/cv.pdf){.btn .btn-sm .btn-outline-secondary}
+[Google Scholar](https://scholar.google.com/citations?user=X1KlIsQAAAAJ&hl=en){.btn .btn-sm .btn-outline-secondary}
+[GitHub](https://github.com/Nyandwi){.btn .btn-sm .btn-outline-secondary}
+[Email](mailto:jeandedi@andrew.cmu.edu){.btn .btn-sm .btn-outline-secondary}
+:::
+
 ## Research Interests
 
-I am broadly interested in machine learning and multimodal AI. More specifically, I work on improving and evaluating vision language models. I am currently exploring multimodal post-training methods, improving visual reasoning in VLMs, and making AI useful for general population.
+I am broadly interested in machine learning, natural language processing, and multimodal AI. More specifically, I work on improving and evaluating vision language models. I am currently exploring multimodal post-training, visual reasoning in VLMs, and data-efficient learning.
+
+I have previously worked on adversarial evaluation in VLMs(NeurIPS 2024), grounding world knowledge in multimodal LLMs(EMNLP 2025), and open-source multilingual/cultural multimodal LLMs(Pangea ICLR 2024, CulturalPangea EMNLP 2025).
 
 ## Publications
 
