--- a/index.qmd
+++ b/index.qmd
@@ -29,7 +29,7 @@ I am Jean de Dieu Nyandwi. I work on machine learning and multimodal AI, and cur
 [LinkedIn](https://www.linkedin.com/in/nyandwi/){.btn .btn-sm .btn-outline-secondary}
 :::
 
-I recently completed MS Engineering AI at Carnegie Mellon University. I did undergrad in Electronics and Telecommunication Engineering at University of Rwanda, learning machine learning on the side. Prior to that, I achieved the top score, country wide, in Advanced Level National Examinations in Electronics and Telecommunication, senior highschool.
+I completed MS Engineering AI at Carnegie Mellon University. I did undergrad in Electronics and Telecommunication Engineering at University of Rwanda, learning machine learning on the side. Prior to that, I achieved the top score, country wide, in Advanced Level National Examinations in Electronics and Telecommunication, senior highschool.
 
 Beside research, I also have interests in AI education and accessibility, and I spend a fair amount of time [designing](https://nyandwi.com/machine_learning_complete/), [writing](https://deeprevision.github.io/) [deep dives](https://deeprevision.github.io/posts/001-transformer/), exploring, and [sharing](https://twitter.com/Jeande_d) learning resources.
 
@@ -85,6 +85,10 @@ html`<div class="pub-container">
   }).join('')}
 </div>`
 ```
+
+## Research Articles
+
+-   The Transformer Blueprint: A Holistic Guide to the Transformer Neural Network Architecture \| [Blog](https://deeprevision.github.io/posts/001-transformer/) \| Views: 31K \| July 2023
 
 ## Latest News
 
