--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ resources:
 
 I am Jean de Dieu Nyandwi. I work on machine learning and multimodal AI and am currently a visiting researcher at CMU’s Language Technologies Institute (NeuLab), where I am fortunate to work with [Prof. Graham Neubig](http://phontron.com/) and other amazing colleagues at [Neulab](https://www.cs.cmu.edu/~neulab/) and across CMU. I have also had the privilege of collaborating with [Prof. Deva Ramanan](https://cs.cmu.edu/~deva).
 
-I am broadly interested in machine learning, natural language processing, multimodal recognition, and data-centric approaches. I am currently interested in multimodal post-training, multimodal reasoning, and data-efficient learning.
+I am broadly interested in machine learning, natural language processing, multimodal recognition, and data-centric approaches. I am currently interested in multimodal post-training, reasoning, and data curation/data-efficiency in VLMs.
 
 I have previously worked on [natural adversarial evaluation in VLMs](https://arxiv.org/abs/2410.14669)(NaturalBench - NeurIPS 2024), [grounding multimodal LLMs with world knowledge](https://arxiv.org/abs/2508.07414)(EMNLP 2025), and open-source multilingual/cultural multimodal LLMs/datasets ([CulturalGround](https://huggingface.co/datasets/neulab/CulturalGround) - EMNLP 2025, [Pangea](https://arxiv.org/abs/2410.16153) - ICLR 2024).
 
@@ -32,7 +32,7 @@ I have previously worked on [natural adversarial evaluation in VLMs](https://arx
 [LinkedIn](https://www.linkedin.com/in/nyandwi/){.btn .btn-sm .btn-outline-secondary}
 :::
 
-I completed MS Engineering AI at Carnegie Mellon University. I did undergrad in Electronics and Telecommunication Engineering at University of Rwanda, learning machine learning on the side. Prior to that, I achieved the top score, country wide, in Advanced Level National Examinations in Electronics and Telecommunication in senior highschool.
+I completed MS Engineering AI at Carnegie Mellon University. I did undergrad in Electronics and Telecommunication Engineering, learning machine learning on the side. Prior to that, I achieved the top score, country wide, in Advanced Level National Examinations in Electronics and Telecommunication in senior highschool.
 
 Beside research, I also have interests in AI education and accessibility, and I spend a fair amount of time [designing](https://nyandwi.com/machine_learning_complete/), [writing](https://deeprevision.github.io/) [deep dives](https://deeprevision.github.io/posts/001-transformer/), exploring, and [sharing](https://twitter.com/Jeande_d) learning resources.
 
@@ -88,10 +88,10 @@ html`<div class="pub-container">
 -   The Transformer Blueprint: A Holistic Guide to the Transformer Neural Network Architecture \| [Blog](https://deeprevision.github.io/posts/001-transformer/) \| Views: 31K \| July 2023
 
 ## Latest News
-
+* Sep 2025 - Our [EMNLP 2025 paper](https://arxiv.org/abs/2508.07414) is selected for Oral presentation!
 * Aug 2025 - [CulturalGround](https://huggingface.co/datasets/neulab/CulturalGround) is accepted in EMNLP(Main Conference) 2025!!
 * Aug 2025 - We are releasing [CulturalGround](https://huggingface.co/datasets/neulab/CulturalGround), the largest multilingual/cultural VQA dataset! [ArXiv preprint](https://arxiv.org/abs/2508.07414) also available now. 
-* July 2025: Gave a smoll guest lecture on ML Lifecycle at ALU. Slides [here](https://docs.google.com/presentation/d/1b60xdBCpfq4GwJzeA5zejN8jynUlhNYKMv3r5VI2YS8/edit?usp=sharing).
+* Jul 2025: Gave a smoll guest lecture on ML Lifecycle at ALU. Slides [here](https://docs.google.com/presentation/d/1b60xdBCpfq4GwJzeA5zejN8jynUlhNYKMv3r5VI2YS8/edit?usp=sharing).
 * Jan 2025 - [Pangea](https://neulab.github.io/Pangea) is accepted to ICLR 2025!!
 * Dec 2024 - Joining [Neulab](http://www.cs.cmu.edu/~neulab/index.html) at [LTI CMU](https://www.lti.cs.cmu.edu/) as a visiting researcher, working with and learning a lot from [Graham Neubig](https://phontron.com/) and the team 🤍🥳!!
 * Oct 2024 - We are releasing [Pangea-7B](https://neulab.github.io/Pangea), a fully open multilingual multimodal LLM that outperform existing open models in multilingual & culturally diverse contexts 🔥🔥. Release include models, code, training data, benchmark!!
